--- a/page_analyzer/templates/base.html
+++ b/page_analyzer/templates/base.html
@@ -20,6 +20,14 @@
             </nav>
         </header>
 
+        {% with messages = get_flashed_messages(with_categories=True) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <main class="flex-grow-1">
             {% block content %}{% endblock %}
         </main>
